# Multi-omics-Integration-for-Human-Retinal-research

./: DESCRIPTION  LICENSE  README.md  _targets.R  evaluation.ipynb  preprocessing.ipynb  pyproject.toml  training_and_downstream_analysis.ipynb
R/: evaluation.R  io.R
config/: analysis.yaml  analysis_python.yaml
notebooks/: .Rhistory  2_training_and_downstream_analysis.ipynb  3_evaluation.ipynb  DIABLO_training.R
notebooks/python/: 1_preprocessing.ipynb
scripts/: 02_train_and_downstream.R  run_pipeline.R
scripts/python/: run_pipeline.py
scripts/r/: 01_preprocess.R  02_train_and_downstream.R  03_evaluation.R  common.R  run_pipeline.R
src/python/mofapipeline/: __init__.py  cli.py  config.py  eda.py  evaluation.py  io.py  models.py  mofa.py  preprocessing.py  utils.py
src/r/: config.R  io.R  mofa_01_io.R  mofa_02_downstream.R  mofa_analysis.R  preprocessing.R  visualization.R
tests/: test_preprocessing.py
